# Asterpanel

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: openapi.yaml
billing-plane/: README.md  go.mod
control-plane/: Dockerfile  go.mod  go.sum
db/: seed.sql
db/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_nodes_jobs.down.sql  0002_nodes_jobs.up.sql  0003_domains_dns.down.sql  0003_domains_dns.up.sql  0004_apps_deploys.down.sql  0004_apps_deploys.up.sql  0005_backups_restore.down.sql  0005_backups_restore.up.sql  0006_audit_notifications_billing.down.sql  0006_audit_notifications_billing.up.sql  0007_commercial.down.sql  0007_commercial.up.sql  0008_cron_ftp.down.sql  0008_cron_ftp.up.sql  0009_env_firewall.down.sql  0009_env_firewall.up.sql  0010_files_permissions.down.sql  0010_files_permissions.up.sql  0011_website_runtime_version.down.sql  0011_website_runtime_version.up.sql  0012_metrics_permission.down.sql  0012_metrics_permission.up.sql  0013_site_health.down.sql  0013_site_health.up.sql  0014_health_incidents.down.sql  0015_invoices.down.sql  (+63 more)
docs/: ROADMAP-COMMERCIALE.md  architecture.md  commercial-roadmap.md  roadmap.md  threat-model.md
examples/: README.md
node-agent/: Cargo.toml  Dockerfile
node-agent/src/: callback.rs  config.rs  executor.rs  job.rs  main.rs  metrics.rs  nonce.rs  tls.rs  verify.rs
policies/: authz.rego  authz_test.rego  jobs.rego  jobs_test.rego
scripts/: gen-secrets.sh
web/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json
(+249 files in other folders)
